@@ -1,5 +1,6 @@
 v7.2
 -----
+: Fixed a bug that caused coupon messages not to display properly
 
 
 v7.1
